[gd_scene load_steps=2 format=3 uid="uid://cyg5jqs2vh6x5"]

[ext_resource type="Script" uid="uid://c0pe4e0sh06x0" path="res://Levels/Scripts/level_select.gd" id="1_2xdkp"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2xdkp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="Level1Button" type="Button" parent="CanvasLayer"]
z_index = 3
offset_left = 28.0
offset_top = 64.0
offset_right = 126.0
offset_bottom = 108.0
text = "Level 1"

[node name="Level1Button2" type="Button" parent="CanvasLayer"]
z_index = 3
offset_left = 194.0
offset_top = 63.0
offset_right = 292.0
offset_bottom = 107.0
text = "Level 2"

[node name="Level1Button3" type="Button" parent="CanvasLayer"]
z_index = 3
offset_left = 350.0
offset_top = 63.0
offset_right = 448.0
offset_bottom = 107.0
text = "Level 3"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
z_index = -1
offset_right = 480.0
offset_bottom = 269.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 30.0
offset_top = 24.0
offset_right = 132.0
offset_bottom = 47.0
text = "Choose Level"

[connection signal="pressed" from="CanvasLayer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Level1Button2" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Level1Button3" to="." method="_on_level_3_button_pressed"]
